--- a/webapp/src/main/webapp/css/main.css
+++ b/webapp/src/main/webapp/css/main.css
@@ -1,7 +1,3 @@
-h2{
-    color: red;
-}
-
 html{
     color: #385170;
 }
@@ -41,6 +37,7 @@ body {
     display: flex;
     margin: auto;
     max-width: 50%;
+    text-decoration: none;
 }
 
 .formCard{
@@ -66,6 +63,12 @@ body {
 .formButton{
     display: block;
     margin: 0 auto;
+}
+
+.nav-item{
+    font-size: large;
+    text-decoration: none;
+    color: #142D4C;
 }
 
 .inputSpan{
