--- a/services/src/main/resources/templates/tripconfirmation.html
+++ b/services/src/main/resources/templates/tripconfirmation.html
@@ -189,7 +189,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
       <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:30px 10px 30px 20px;font-family:'Open Sans',sans-serif;" align="left">
         
   <div style="color: #333333; line-height: 130%; text-align: left; word-wrap: break-word;">
-    <p style="font-size: 14px; line-height: 130%;"><strong><span style="font-size: 16px; line-height: 20.8px;">Williams Brown,</span></strong></p>
+    <p style="font-size: 14px; line-height: 130%;"><strong><span th:text="${user.name} + ','" style="font-size: 16px; line-height: 20.8px;"></span></strong></p>
 <p style="font-size: 14px; line-height: 130%;"> </p>
 <p style="font-size: 14px; line-height: 130%;"><span style="font-size: 16px; line-height: 20.8px; font-family: Lato, sans-serif;">Your trip request was accepted! </span></p>
   </div>
@@ -380,11 +380,9 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
         
   <!--[if mso]><style>.v-button {background: transparent !important;}</style><![endif]-->
 <div align="center">
-  <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://localhost:8080" style="height:41px; v-text-anchor:middle; width:195px;" arcsize="5%"  stroke="f" fillcolor="#142d4c"><w:anchorlock/><center style="color:#FFFFFF;font-family:'Open Sans',sans-serif;"><![endif]-->
-    <a href="https://tripdetails.com" target="_blank" class="v-button" style="box-sizing: border-box;display: inline-block;font-family:'Open Sans',sans-serif;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #FFFFFF; background-color: #142d4c; border-radius: 2px;-webkit-border-radius: 2px; -moz-border-radius: 2px; width:auto; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word; mso-border-alt: none;font-size: 14px;">
+    <a th:href="@{http://localhost:8080/trips/manageTrip(id=${trip.tripId})}" target="_blank" class="v-button" style="box-sizing: border-box;display: inline-block;font-family:'Open Sans',sans-serif;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #FFFFFF; background-color: #142d4c; border-radius: 2px;-webkit-border-radius: 2px; -moz-border-radius: 2px; width:auto; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word; mso-border-alt: none;font-size: 14px;">
       <span style="display:block;padding:12px 35px;line-height:120%;"><span style="line-height: 16.8px;"><strong><span style="line-height: 16.8px;">View all details &gt;&gt;</span></strong></span></span>
     </a>
-  <!--[if mso]></center></v:roundrect><![endif]-->
 </div>
 
       </td>
