--- a/webapp/src/main/webapp/css/main.css
+++ b/webapp/src/main/webapp/css/main.css
@@ -126,8 +126,10 @@ body {
     width: 24%;
 }
 .tripCards{
-    display: inline-block;
-    width: 68%;
+    display: flex;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    width: 100%;
 }
 
 .card-title{
