feat: mailing translations using spring message

--- a/services/src/main/resources/templates/emailconfirmation.html
+++ b/services/src/main/resources/templates/emailconfirmation.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Transitional //EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
-<head>
+<html xmlns:th="http://www.thymeleaf.org"  xmlns:spring="http://www.springframework.org/tags" xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office"\>
+
 <!--[if gte mso 9]>
 <xml>
   <o:OfficeDocumentSettings>
@@ -155,7 +155,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
     <tr>
       <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px;font-family:'Open Sans',sans-serif;" align="left">
         
-  <h1 style="margin: 0px; color: #ffffff; line-height: 140%; text-align: center; word-wrap: break-word; font-family: 'Raleway',sans-serif; font-size: 48px; "><strong>Account Confirmation</strong></h1>
+  <h1 style="margin: 0px; color: #ffffff; line-height: 140%; text-align: center; word-wrap: break-word; font-family: 'Raleway',sans-serif; font-size: 48px; "><strong th:text="#{AccountConfirmation}"></strong></h1>
 
       </td>
     </tr>
@@ -188,7 +188,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
       <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px 10px 35px;font-family:'Open Sans',sans-serif;" align="left">
         
   <div style="line-height: 140%; text-align: center; word-wrap: break-word;">
-    <p style="font-size: 14px; line-height: 140%;"><span style="color: #e67e23; font-size: 26px; line-height: 36.4px;">  <span style="color: #ecf0f1; line-height: 36.4px;">Registration has been completed</span><span style="color: #ecf0f1; line-height: 36.4px;">!</span></span></p>
+    <p style="font-size: 14px; line-height: 140%;"><span style="color: #e67e23; font-size: 26px; line-height: 36.4px;">  <span style="color: #ecf0f1; line-height: 36.4px;" th:text="#{RegistrationComplete}"></span><span style="color: #ecf0f1; line-height: 36.4px;">!</span></span></p>
   </div>
 
       </td>
@@ -225,7 +225,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
   <div style="color: #333333; line-height: 130%; text-align: left; word-wrap: break-word;">
     <p style="font-size: 14px; line-height: 130%;"><strong><span th:text="${user.name}" style="font-size: 16px; line-height: 20.8px;"></span></strong></p>
 <p style="font-size: 14px; line-height: 130%;"> </p>
-<p style="font-size: 14px; line-height: 130%;"><span style="font-size: 16px; line-height: 20.8px; font-family: Lato, sans-serif;">Thank you for registering to Truckr.com! </span></p>
+<p style="font-size: 14px; line-height: 130%;"><span style="font-size: 16px; line-height: 20.8px; font-family: Lato, sans-serif;" th:text="#{ThankYouRegister}">Thank you for registering to Truckr.com! </span></p>
   </div>
 
       </td>
@@ -260,7 +260,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
       <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:25px 10px 0px 20px;font-family:'Open Sans',sans-serif;" align="left">
         
   <div style="line-height: 140%; text-align: left; word-wrap: break-word;">
-    <p style="font-size: 14px; line-height: 140%;"><span style="font-family: Lato, sans-serif; font-size: 14px; line-height: 19.6px; color: #142d4c;"><strong><span style="font-size: 18px; line-height: 25.2px;">Account Details</span></strong></span></p>
+    <p style="font-size: 14px; line-height: 140%;"><span style="font-family: Lato, sans-serif; font-size: 14px; line-height: 19.6px; color: #142d4c;"><strong><span style="font-size: 18px; line-height: 25.2px;" th:text="#{AccountDetails}"></span></strong></span></p>
   </div>
 
       </td>
@@ -294,7 +294,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
       <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px 10px 10px 20px;font-family:'Open Sans',sans-serif;" align="left">
         
   <div style="color: #333333; line-height: 140%; text-align: left; word-wrap: break-word;">
-    <p style="font-size: 14px; line-height: 140%;"><strong>Username: </strong> <span th:text="${user.name}" style="color: #828080; font-size: 14px; line-height: 19.6px;"></span></p>
+    <p style="font-size: 14px; line-height: 140%;"><strong th:text="#{Username}"></strong> <span th:text="${user.name}" style="color: #828080; font-size: 14px; line-height: 19.6px;"></span></p>
   </div>
 
       </td>
@@ -343,7 +343,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
       <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:20px 20px 15px;font-family:'Open Sans',sans-serif;" align="left">
         
   <div style="color: #333333; line-height: 160%; text-align: left; word-wrap: break-word;">
-    <p style="font-size: 14px; line-height: 160%;"><span style="font-size: 16px; line-height: 25.6px; font-family: Lato, sans-serif;">Please, consider this as an acceptance email. If you have any questions contact us with this link <span style="text-decoration: underline; line-height: 25.6px; color: #385170; font-size: 16px;">truckrconfirmation@gmail.com</span></span></p>
+    <p style="font-size: 14px; line-height: 160%;"><span style="font-size: 16px; line-height: 25.6px; font-family: Lato, sans-serif;" th:text="#{PleaseConsider}">  <span style="text-decoration: underline; line-height: 25.6px; color: #385170; font-size: 16px;"></span></span></p>
   </div>
 
       </td>
@@ -357,7 +357,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
       <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:0px 10px 30px 20px;font-family:'Open Sans',sans-serif;" align="left">
         
   <div style="color: #333333; line-height: 160%; text-align: left; word-wrap: break-word;">
-    <p style="font-size: 14px; line-height: 160%;"><span style="font-size: 16px; line-height: 25.6px; font-family: Lato, sans-serif;">We look forward to start working with you!</span></p>
+    <p style="font-size: 14px; line-height: 160%;"><span style="font-size: 16px; line-height: 25.6px; font-family: Lato, sans-serif;" th:text="#{LookForward}"></span></p>
   </div>
 
       </td>
@@ -373,7 +373,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
   <!--[if mso]><style>.v-button {background: transparent !important;}</style><![endif]-->
 <div align="center">
     <a th:href="@{http://localhost:8080/}" target="_blank" class="v-button" style="box-sizing: border-box;display: inline-block;font-family:'Open Sans',sans-serif;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #FFFFFF; background-color: #142d4c; border-radius: 2px;-webkit-border-radius: 2px; -moz-border-radius: 2px; width:auto; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word; mso-border-alt: none;font-size: 14px;">
-      <span style="display:block;padding:12px 35px;line-height:120%;"><span style="line-height: 16.8px;"><strong><span style="line-height: 16.8px;">Start Browsing Trips Now! &gt;&gt;</span></strong></span></span>
+      <span style="display:block;padding:12px 35px;line-height:120%;"><span style="line-height: 16.8px;"><strong><span style="line-height: 16.8px;" th:text="#{StartBrowsing}"></span></strong></span></span>
     </a>
 </div>
 
