--- a/services/src/main/resources/templates/proposal.html
+++ b/services/src/main/resources/templates/proposal.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Transitional //EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
+<html xmlns:th="http://www.thymeleaf.org"  xmlns:spring="http://www.springframework.org/tags" xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
 <head>
 <!--[if gte mso 9]>
 <xml>
@@ -135,7 +135,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
     <tr>
       <td style="overflow-wrap:break-word;word-break:break-word;padding:10px;font-family:'Open Sans',sans-serif;" align="left">
         
-  <h1 style="margin: 0px; color: #ffffff; line-height: 140%; text-align: center; word-wrap: break-word; font-family: 'Raleway',sans-serif; font-size: 48px; font-weight: 400;"><strong>Someone has requested your trip!</strong></h1>
+  <h1 style="margin: 0px; color: #ffffff; line-height: 140%; text-align: center; word-wrap: break-word; font-family: 'Raleway',sans-serif; font-size: 48px; font-weight: 400;"><strong th:text="#{PropTitle}"></strong></h1>
 
       </td>
     </tr>
@@ -169,7 +169,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
       <td style="overflow-wrap:break-word;word-break:break-word;padding:30px 10px 30px 20px;font-family:'Open Sans',sans-serif;" align="left">
         
   <div style="color: #333333; line-height: 130%; text-align: left; word-wrap: break-word;">
-    <p style="font-size: 14px; line-height: 130%;"><strong><span th:text="'Dear ' + ${user.name} +', your trip has been requested.'" style="font-size: 16px; line-height: 20.8px;"></span></strong></p>
+    <p style="font-size: 14px; line-height: 130%;"><strong><span th:text="#{PropPhrase1} + ${user.name} + #{PropPhrase2}" style="font-size: 16px; line-height: 20.8px;"></span></strong></p>
 <p style="font-size: 14px; line-height: 130%;"> </p>
 <p style="font-size: 14px; line-height: 130%;"><span th:text="${proposal.userName}" style="font-size: 16px; line-height: 20.8px; font-family: Lato, sans-serif;"></span></p>
   </div>
@@ -206,7 +206,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
       <td style="overflow-wrap:break-word;word-break:break-word;padding:25px 10px 0px 20px;font-family:'Open Sans',sans-serif;" align="left">
         
   <div style="line-height: 140%; text-align: left; word-wrap: break-word;">
-    <p style="font-size: 14px; line-height: 140%;"><span style="font-family: Lato, sans-serif; font-size: 14px; line-height: 19.6px; color: #142d4c;"><strong><span style="font-size: 18px; line-height: 25.2px;">DESCRIPTION (written by user)</span></strong></span></p>
+    <p style="font-size: 14px; line-height: 140%;"><span style="font-family: Lato, sans-serif; font-size: 14px; line-height: 19.6px; color: #142d4c;"><strong><span style="font-size: 18px; line-height: 25.2px;" th:text="#{PropDescription}">DESCRIPTION (written by user)</span></strong></span></p>
   </div>
 
       </td>
@@ -278,14 +278,14 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
         <th:block th:if="${user.getRole().equals('TRUCKER')}">
               <div align="center">
                     <a th:href="@{http://localhost:8080/trips/manageTrip(tripId=${proposal.tripid})}" target="_blank" class="v-button" style="box-sizing: border-box;display: inline-block;font-family:'Open Sans',sans-serif;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #FFFFFF; background-color: #2dc26b; border-radius: 2px;-webkit-border-radius: 2px; -moz-border-radius: 2px; width:auto; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word; mso-border-alt: none;font-size: 14px;">
-                      <span style="display:block;padding:12px 35px;line-height:120%;"><span style="line-height: 16.8px;"><strong><span style="line-height: 16.8px;">See Proposals</span></strong></span></span>
+                      <span style="display:block;padding:12px 35px;line-height:120%;"><span style="line-height: 16.8px;"><strong><span style="line-height: 16.8px;" th:text="#{SeeProp}"></span></strong></span></span>
                     </a>
               </div>
           </th:block>
         <th:block th:if="not ${user.getRole().equals('TRUCKER')}">
           <div align="center">
             <a th:href="@{http://localhost:8080/requests/manageRequest(requestId=${proposal.requestid})}" target="_blank" class="v-button" style="box-sizing: border-box;display: inline-block;font-family:'Open Sans',sans-serif;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #FFFFFF; background-color: #2dc26b; border-radius: 2px;-webkit-border-radius: 2px; -moz-border-radius: 2px; width:auto; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word; mso-border-alt: none;font-size: 14px;">
-              <span style="display:block;padding:12px 35px;line-height:120%;"><span style="line-height: 16.8px;"><strong><span style="line-height: 16.8px;">See Proposals</span></strong></span></span>
+              <span style="display:block;padding:12px 35px;line-height:120%;"><span style="line-height: 16.8px;"><strong><span style="line-height: 16.8px;" th:text="#{SeeProp}"></span></strong></span></span>
             </a>
           </div>
         </th:block>
