--- a/services/src/main/resources/templates/resetpassword.html
+++ b/services/src/main/resources/templates/resetpassword.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Transitional //EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
+<html xmlns:th="http://www.thymeleaf.org"  xmlns:spring="http://www.springframework.org/tags" xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
 <head>
 <!--[if gte mso 9]>
 <xml>
@@ -138,7 +138,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
     <tr>
       <td style="overflow-wrap:break-word;word-break:break-word;padding:10px;font-family:'Open Sans',sans-serif;" align="left">
         
-  <h1 style="margin: 0px; color: #ffffff; line-height: 140%; text-align: center; word-wrap: break-word; font-family: 'Raleway',sans-serif; font-size: 39px; font-weight: 400;">Change your password</h1>
+  <h1 style="margin: 0px; color: #ffffff; line-height: 140%; text-align: center; word-wrap: break-word; font-family: 'Raleway',sans-serif; font-size: 39px; font-weight: 400;" th:text="#{ResetTitle}"></h1>
 
       </td>
     </tr>
@@ -174,9 +174,9 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
   <div style="color: #333333; line-height: 130%; text-align: left; word-wrap: break-word;">
     <p style="font-size: 14px; line-height: 130%;"><strong><span th:text="${user.name} + ','" style="font-size: 16px; line-height: 20.8px;"></span></strong></p>
 <p style="font-size: 14px; line-height: 130%;"> </p>
-<p style="font-size: 14px; line-height: 130%;"><span style="font-size: 16px; line-height: 20.8px; font-family: Lato, sans-serif;">We have recieved a password change request for your Truckr account.</span></p>
+<p style="font-size: 14px; line-height: 130%;"><span style="font-size: 16px; line-height: 20.8px; font-family: Lato, sans-serif;" th:text="#{ResetPhrase1}"></span></p>
 <p style="font-size: 14px; line-height: 130%;"> </p>
-<p style="font-size: 14px; line-height: 130%;"><span style="font-size: 16px; line-height: 20.8px; font-family: Lato, sans-serif;">If you did not ask to change your password, then you can ignore this email and your password will not be changed. The link below will remain active for 24 hours.</span></p>
+<p style="font-size: 14px; line-height: 130%;"><span style="font-size: 16px; line-height: 20.8px; font-family: Lato, sans-serif;" th:text="#{ResetPhrase2}"></span></p>
   </div>
 
       </td>
@@ -211,7 +211,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
       <td style="overflow-wrap:break-word;word-break:break-word;padding:0px 10px 30px 20px;font-family:'Open Sans',sans-serif;" align="left">
         
   <div style="color: #333333; line-height: 160%; text-align: left; word-wrap: break-word;">
-    <p style="font-size: 14px; line-height: 160%;"><span style="font-size: 16px; line-height: 25.6px; font-family: Lato, sans-serif;">Happy Trucking!</span></p>
+    <p style="font-size: 14px; line-height: 160%;"><span style="font-size: 16px; line-height: 25.6px; font-family: Lato, sans-serif;" th:text="#{HappyTrucking}"></span></p>
   </div>
 
       </td>
@@ -248,7 +248,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
   <!--[if mso]><style>.v-button {background: transparent !important;}</style><![endif]-->
 <div align="center">
     <a th:href="@{http://localhost:8080/resetPassword(hash=${hash})}" target="_blank" class="v-button" style="box-sizing: border-box;display: inline-block;font-family:'Open Sans',sans-serif;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #FFFFFF; background-color: #142d4c; border-radius: 2px;-webkit-border-radius: 2px; -moz-border-radius: 2px; width:auto; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word; mso-border-alt: none;font-size: 14px;">
-      <span style="display:block;padding:12px 35px;line-height:120%;"><span style="line-height: 16.8px;"><strong><span style="line-height: 16.8px;">Reset Password</span></strong></span></span>
+      <span style="display:block;padding:12px 35px;line-height:120%;"><span style="line-height: 16.8px;"><strong><span style="line-height: 16.8px;" th:text="#{ResetButton}"></span></strong></span></span>
     </a>
 </div>
 
