--- a/services/src/main/resources/templates/tripconfirmation.html
+++ b/services/src/main/resources/templates/tripconfirmation.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Transitional //EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
+<html xmlns:th="http://www.thymeleaf.org"  xmlns:spring="http://www.springframework.org/tags" xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
 <head>
 <!--[if gte mso 9]>
 <xml>
@@ -155,7 +155,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
     <tr>
       <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px;font-family:'Open Sans',sans-serif;" align="left">
         
-  <h1 style="margin: 0px; color: #ffffff; line-height: 140%; text-align: center; word-wrap: break-word; font-family: 'Raleway',sans-serif; font-size: 48px; font-weight: 400;"><strong>Your Trip has been confirmed!</strong></h1>
+  <h1 style="margin: 0px; color: #ffffff; line-height: 140%; text-align: center; word-wrap: break-word; font-family: 'Raleway',sans-serif; font-size: 48px; font-weight: 400;"><strong th:text="#{TripTitle}"></strong></h1>
 
       </td>
     </tr>
@@ -191,7 +191,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
   <div style="color: #333333; line-height: 130%; text-align: left; word-wrap: break-word;">
     <p style="font-size: 14px; line-height: 130%;"><strong><span th:text="${user.name} + ','" style="font-size: 16px; line-height: 20.8px;"></span></strong></p>
 <p style="font-size: 14px; line-height: 130%;"> </p>
-<p style="font-size: 14px; line-height: 130%;"><span style="font-size: 16px; line-height: 20.8px; font-family: Lato, sans-serif;">Your trip request was accepted! </span></p>
+<p style="font-size: 14px; line-height: 130%;"><span style="font-size: 16px; line-height: 20.8px; font-family: Lato, sans-serif;" th:text="#{TripPhrase}"></span></p>
   </div>
 
       </td>
@@ -226,7 +226,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
       <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:25px 10px 0px 20px;font-family:'Open Sans',sans-serif;" align="left">
         
   <div style="line-height: 140%; text-align: left; word-wrap: break-word;">
-    <p style="font-size: 14px; line-height: 140%;"><span style="font-family: Lato, sans-serif; font-size: 14px; line-height: 19.6px; color: #142d4c;"><strong><span style="font-size: 18px; line-height: 25.2px;">TRIP DETAILS</span></strong></span></p>
+    <p style="font-size: 14px; line-height: 140%;"><span style="font-family: Lato, sans-serif; font-size: 14px; line-height: 19.6px; color: #142d4c;"><strong><span style="font-size: 18px; line-height: 25.2px;" th:text="#{TripDetailsTitle}"></span></strong></span></p>
   </div>
 
       </td>
@@ -260,7 +260,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
       <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px 10px 10px 20px;font-family:'Open Sans',sans-serif;" align="left">
         
   <div style="color: #333333; line-height: 140%; text-align: left; word-wrap: break-word;">
-    <p style="font-size: 14px; line-height: 140%;"><strong>Origin: </strong> <span th:text="${trip.origin}" style="color: #828080; font-size: 14px; line-height: 19.6px;"></span></p>
+    <p style="font-size: 14px; line-height: 140%;"><strong th:text="#{ReqOrigin}"></strong> <span th:text="${trip.origin}" style="color: #828080; font-size: 14px; line-height: 19.6px;"></span></p>
   </div>
 
       </td>
@@ -274,7 +274,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
       <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:5px 10px 10px 20px;font-family:'Open Sans',sans-serif;" align="left">
         
   <div style="color: #333333; line-height: 140%; text-align: left; word-wrap: break-word;">
-    <p style="font-size: 14px; line-height: 140%;"><strong>Destination: </strong> <span th:text="${trip.destination}" style="color: #828080; font-size: 14px; line-height: 19.6px;"></span></p>
+    <p style="font-size: 14px; line-height: 140%;"><strong th:text="#{ReqDestination}"></strong> <span th:text="${trip.destination}" style="color: #828080; font-size: 14px; line-height: 19.6px;"></span></p>
   </div>
 
       </td>
@@ -302,7 +302,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
       <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:5px 10px 10px 20px;font-family:'Open Sans',sans-serif;" align="left">
         
   <div style="color: #333333; line-height: 140%; text-align: left; word-wrap: break-word;">
-    <p style="font-size: 14px; line-height: 140%;"><strong>Arrival Date / Time : </strong> <span th:text="${trip.arrivalDate}" style="color: #828080; font-size: 14px; line-height: 19.6px;"></span></p>
+    <p style="font-size: 14px; line-height: 140%;"><strong th:text="#{ReqArrival}"></strong> <span th:text="${trip.arrivalDate}" style="color: #828080; font-size: 14px; line-height: 19.6px;"></span></p>
   </div>
 
       </td>
@@ -316,7 +316,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
       <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:5px 10px 25px 20px;font-family:'Open Sans',sans-serif;" align="left">
         
   <div style="color: #333333; line-height: 140%; text-align: left; word-wrap: break-word;">
-    <p style="font-size: 14px; line-height: 140%;"><strong>Price :  </strong><span th:text="${trip.price}" style="color: #828080; font-size: 14px; line-height: 19.6px;"> </span> $</p>
+    <p style="font-size: 14px; line-height: 140%;"><strong th:text="#{ReqPrice}">Price :  </strong><span th:text="${trip.price}" style="color: #828080; font-size: 14px; line-height: 19.6px;"> </span> $</p>
   </div>
 
       </td>
@@ -351,7 +351,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
       <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:20px 20px 15px;font-family:'Open Sans',sans-serif;" align="left">
         
   <div style="color: #333333; line-height: 160%; text-align: left; word-wrap: break-word;">
-    <p style="font-size: 14px; line-height: 160%;"><span style="font-size: 16px; line-height: 25.6px; font-family: Lato, sans-serif;">Please, consider this as a confirmation email. If you have any questions contact us with this link <span style="text-decoration: underline; line-height: 25.6px; color: #e67e23; font-size: 16px;">truckrconfirmation@gmail.com</span></span></p>
+    <p style="font-size: 14px; line-height: 160%;"><span style="font-size: 16px; line-height: 25.6px; font-family: Lato, sans-serif;" th:text="#{PleaseConsider}"><span style="text-decoration: underline; line-height: 25.6px; color: #e67e23; font-size: 16px;"></span></span></p>
   </div>
 
       </td>
@@ -365,7 +365,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
       <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:0px 10px 30px 20px;font-family:'Open Sans',sans-serif;" align="left">
         
   <div style="color: #333333; line-height: 160%; text-align: left; word-wrap: break-word;">
-    <p style="font-size: 14px; line-height: 160%;"><span style="font-size: 16px; line-height: 25.6px; font-family: Lato, sans-serif;">Happy Trucking!</span></p>
+    <p style="font-size: 14px; line-height: 160%;"><span style="font-size: 16px; line-height: 25.6px; font-family: Lato, sans-serif;" th:text="#{HappyTrucking}"></span></p>
   </div>
 
       </td>
