--- a/services/src/main/resources/templates/tripconfirmation.html
+++ b/services/src/main/resources/templates/tripconfirmation.html
@@ -323,6 +323,19 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
     </tr>
   </tbody>
 </table>
+    <table style="font-family:'Open Sans',sans-serif;" role="presentation" cellpadding="0" cellspacing="0" width="100%" border="0">
+      <tbody>
+      <tr>
+        <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:5px 10px 25px 20px;font-family:'Open Sans',sans-serif;" align="left">
+
+          <div style="color: #333333; line-height: 140%; text-align: left; word-wrap: break-word;">
+            <p style="font-size: 14px; line-height: 140%;"><strong >Contact email:</strong><span th:text="${user2.email}" style="color: #828080; font-size: 14px; line-height: 19.6px;"> </span></p>
+          </div>
+
+        </td>
+      </tr>
+      </tbody>
+    </table>
 
   <!--[if (!mso)&(!IE)]><!--></div><!--<![endif]-->
   </div>
