ft: review frontend (stars and buttons not working yet and check duplicate id reference)

--- a/webapp/src/main/webapp/css/main.css
+++ b/webapp/src/main/webapp/css/main.css
@@ -143,3 +143,11 @@ footer{
 .userDetailsNavBar{
     display: flex; flex-direction: column; justify-content: center; align-items: center;
 }
+
+.rating-stars {
+    cursor: pointer;
+}
+
+.star {
+    color: #385170;
+}
