ft: updating stars

--- a/webapp/src/main/webapp/css/main.css
+++ b/webapp/src/main/webapp/css/main.css
@@ -151,3 +151,34 @@ footer{
 .star {
     color: #385170;
 }
+
+.rating {
+    display: inline-block;
+}
+
+.rating input[type="radio"] {
+    display: none;
+}
+
+.rating label {
+    cursor: pointer;
+    width: 1em;
+    height: 1em;
+    margin-right: 0.25em;
+    background-color: #ccc;
+    border-radius: 50%;
+    display: inline-block;
+}
+
+.rating label::before {
+    content: "\2606";
+    color: #fff;
+    font-size: 1.5em;
+    line-height: 1em;
+    text-align: center;
+    display: block;
+}
+
+.rating input[type="radio"]:checked + label::before {
+    content: "\2605";
+}
