--- a/webapp/src/main/webapp/css/main.css
+++ b/webapp/src/main/webapp/css/main.css
@@ -188,5 +188,5 @@ footer{
     width: 200px;
     object-fit: cover;
     border-radius: 10000px;
-    border:3px solid black;
+    border:3px solid #385170;
 }
