--- a/services/src/main/resources/templates/emailconfirmation.html
+++ b/services/src/main/resources/templates/emailconfirmation.html
@@ -118,9 +118,9 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
 <table width="100%" cellpadding="0" cellspacing="0" border="0">
   <tr>
     <td style="padding-right: 0px;padding-left: 0px;" align="center">
-      
-      <img align="center" border="0" src="https://i.ibb.co/8YTctvW/image-5.png" alt="Logo" title="Logo" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 31%;max-width: 179.8px;" width="179.8" class="v-src-width v-src-max-width"/>
-      
+      <a th:href="@{http://pawserver.it.itba.edu.ar/paw-2023a-08}">
+      <img align="center" border="0"  src="https://i.ibb.co/8YTctvW/image-5.png" alt="Logo" title="Logo" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 31%;max-width: 179.8px;" width="179.8" class="v-src-width v-src-max-width"/>
+      </a>
     </td>
   </tr>
 </table>
