--- a/services/src/main/resources/templates/requestconfirmation.html
+++ b/services/src/main/resources/templates/requestconfirmation.html
@@ -118,9 +118,9 @@
                       <table width="100%" cellpadding="0" cellspacing="0" border="0">
                         <tr>
                           <td style="padding-right: 0px;padding-left: 0px;" align="center">
-
-                            <img align="center" border="0" src="https://i.ibb.co/s5VynHR/image-2.png" alt="Logo" title="Logo" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 36%;max-width: 208.8px;" width="208.8" class="v-src-width v-src-max-width"/>
-
+                            <a th:href="@{http://pawserver.it.itba.edu.ar/paw-2023a-08}">
+                            <img align="center" border="0"  src="https://i.ibb.co/s5VynHR/image-2.png" alt="Logo" title="Logo" style="outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;clear: both;display: inline-block !important;border: none;height: auto;float: none;width: 36%;max-width: 208.8px;" width="208.8" class="v-src-width v-src-max-width"/>
+                            </a>
                           </td>
                         </tr>
                       </table>
