--- a/webapp/src/main/webapp/css/main.css
+++ b/webapp/src/main/webapp/css/main.css
@@ -190,3 +190,10 @@ footer{
     border-radius: 10000px;
     border:3px solid #385170;
 }
+
+.profileImageNavbar {
+    height: 50px;
+    width: 50px;
+    object-fit: cover;
+    border-radius: 10000px;
+}
